--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <li><div class="sileo"> <a href="sileo://source/https://nx0xv-repo.github.io/repo.github.io/"><button class="sileobtn">SILEO</button> </a></div></li>
 
-<li><div class="zebra"><a href="zbra://sources/add/https://nx0xv-repo.github.io/repo.github.io//"><button class="zebrabtn">ZEBRA</button> </a></div></li>
+<li><div class="zebra"><a href="zbra://sources/add/https://nx0xv-repo.github.io/repo.github.io/"><button class="zebrabtn">ZEBRA</button> </a></div></li>
 
 </ul></div>
 </body>
